[package]
name = "circuits"
version = "0.1.0"
authors = ["Sam De Roeck <sadroeck@gmail.com>"]
edition = "2021"

[features]
default = ["tokio"]

[dependencies]
anyhow = "1.0"
flume = "0.10"
futures = "0.3"

# Optional runtime dependencies
tokio = { version = "1.21", optional = true, features = [ "rt" ] }

# WIP
# smol = { version = "1.2", optional = true }

[dev-dependencies]
tokio = { version = "1.21", features = ["test-util", "macros", "rt", "rt-multi-thread", "time"] }